Bug 969356 - Backed out because this change hides the scrollbar and clips bottom tiles in portrait/snapped.
UltraBlame original commit: 733bb9bfcc1463f0111a1992fe48bc06f8908a34

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -245,6 +245,10 @@ documenttab[selected] .documenttab-selection:-moz-locale-dir(rtl) {
 
 
 
+#content-viewport[startpage] .active-tab-notificationbox {
+  padding-bottom: @toolbar_height@;
+}
+
 #urlbar-autocomplete[viewstate="snapped"],
 #urlbar-autocomplete[viewstate="portrait"]{
   -moz-box-orient: vertical;
